# reversi

./: CMakeLists.txt  ab_agent.cpp  ab_agent.h  g_node.cpp  g_node.h  game.cpp  game.h  match.h  mcts_agent.cpp  mcts_agent.h  random_agent.cpp  random_agent.h  reversi.cpp
